--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "@tanstack/vue-query": "^4.29.15",
-        "@vuelidate/core": "^2.0.2",
-        "@vuelidate/validators": "^2.0.2",
-        "axios": "^1.4.0",
         "core-js": "^3.31.0",
         "vue": "^3.3.4",
-        "vue-router": "^4.2.2",
-        "vuejs3-datepicker": "^1.0.19"
+        "vue-router": "^4.2.2"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -27,15 +22,11 @@
         "@vue/cli-service": "~5.0.8",
         "@vue/compiler-sfc": "^3.3.4",
         "@vue/eslint-config-typescript": "^11.0.3",
-        "autoprefixer": "^10.4.14",
-        "daisyui": "^3.1.6",
         "eslint": "^8.43.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-vue": "^9.15.0",
-        "postcss": "^8.4.24",
         "prettier": "^2.8.8",
-        "tailwindcss": "^3.3.2",
         "typescript": "~5.1.3"
     }
 }
